--- a/app/src/main/res/layout/activity_odd_numbers_result.xml
+++ b/app/src/main/res/layout/activity_odd_numbers_result.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundDark"
     tools:context="com.infovsn.homework.OddNumbersResult">
 
     <!-- Content scrolls from the top and stays above the anchored adView at the bottom -->
