--- a/app/src/main/res/layout/native_ad_small.xml
+++ b/app/src/main/res/layout/native_ad_small.xml
@@ -12,6 +12,21 @@
         android:orientation="horizontal"
         android:gravity="center_vertical">
 
+        <!-- Added attribution label per AdMob policy -->
+        <TextView
+            android:id="@+id/ad_attribution"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ad_attribution"
+            android:textColor="@android:color/white"
+            android:textSize="11sp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:paddingTop="3dp"
+            android:paddingBottom="3dp"
+            android:background="@drawable/ad_attribution_bg"
+            android:layout_marginEnd="8dp" />
+
         <ImageView
             android:id="@+id/ad_app_icon"
             android:layout_width="40dp"
