--- a/app/src/main/res/layout/activity_subtraction.xml
+++ b/app/src/main/res/layout/activity_subtraction.xml
@@ -7,12 +7,22 @@
     android:background="@color/backgroundDark"
     tools:context="com.infovsn.homework.Addition">
 
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_alignParentTop="true"
+        android:background="@color/actionBarRed"
+        app:titleTextColor="@color/white"
+        app:navigationIconTint="@color/white"
+        app:title="@string/m3" />
+
     <TextView
         android:id="@+id/txtScreen"
         style="@style/DisplayText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@id/toolbar"
         android:layout_above="@+id/first"
         android:maxLines="50"
         android:scrollbars="vertical"
