--- a/app/src/main/res/layout/hcf_division.xml
+++ b/app/src/main/res/layout/hcf_division.xml
@@ -5,12 +5,22 @@
     android:layout_height="match_parent"
     android:background="@color/backgroundDark">
 
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_alignParentTop="true"
+        android:background="@color/actionBarRed"
+        app:titleTextColor="@color/white"
+        app:navigationIconTint="@color/white"
+        app:title="@string/m9" />
+
     <ScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
-        android:layout_alignParentTop="true">
+        android:layout_below="@id/toolbar">
 
         <LinearLayout
             android:id="@+id/content"
