--- a/app/src/main/res/layout/activity_even_numbers_result.xml
+++ b/app/src/main/res/layout/activity_even_numbers_result.xml
@@ -8,12 +8,22 @@
     android:background="@color/backgroundDark"
     tools:context="com.infovsn.homework.EvenNumbersResult">
 
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_alignParentTop="true"
+        android:background="@color/actionBarRed"
+        app:titleTextColor="@color/white"
+        app:navigationIconTint="@color/white"
+        app:title="@string/m14" />
+
     <!-- Content scrolls from the top and stays above the anchored adView at the bottom -->
     <ScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@id/toolbar"
         android:layout_above="@id/adView"
         android:fillViewport="true">
 
