--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,18 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backgroundLight"
+    android:background="@color/backgroundDark"
     tools:context="com.infovsn.homework.MainActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="wrap_content"
+        android:minHeight="72dp"
         android:layout_alignParentTop="true"
-        android:background="@color/actionBarRed"
-        app:titleTextColor="@color/white"
-        app:navigationIconTint="@color/white"
-        app:title="@string/app_name" />
+        android:background="@android:color/transparent"
+        app:titleTextColor="@color/textPrimary"
+        app:navigationIconTint="@color/textPrimary"
+        app:titleCentered="true">
+
+        <TextView
+            android:id="@+id/toolbarTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:gravity="center"
+            android:background="@drawable/toolbar_pill_bg"
+            android:paddingStart="28dp"
+            android:paddingEnd="28dp"
+            android:paddingTop="14dp"
+            android:paddingBottom="14dp"
+            android:minHeight="48dp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:includeFontPadding="true"
+            android:text="@string/app_name"
+            android:textColor="@color/textPrimary"
+            android:textSize="22sp"
+            android:fontFamily="sans-serif-medium"/>
+    </com.google.android.material.appbar.MaterialToolbar>
 
     <ScrollView
         android:id="@+id/scrollView1"
@@ -34,36 +58,36 @@
             <!-- Button Grid Rows -->
             <!-- Each row: two HomeMenuButton styled buttons -->
             <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginBottom="14dp">
-                <Button android:id="@+id/button1" style="@style/HomeMenuButton" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m1" android:layout_marginEnd="8dp" />
-                <Button android:id="@+id/button2" style="@style/HomeMenuButton" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m2" android:layout_marginStart="8dp" />
+                <Button android:id="@+id/button1" style="@style/HomeMenuButton.Grey" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m1" android:layout_marginEnd="8dp" />
+                <Button android:id="@+id/button2" style="@style/HomeMenuButton.Grey" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m2" android:layout_marginStart="8dp" />
             </LinearLayout>
             <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginBottom="14dp">
-                <Button android:id="@+id/button3" style="@style/HomeMenuButton" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m3" android:layout_marginEnd="8dp" />
-                <Button android:id="@+id/button4" style="@style/HomeMenuButton" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m4" android:layout_marginStart="8dp" />
+                <Button android:id="@+id/button3" style="@style/HomeMenuButton.Grey" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m3" android:layout_marginEnd="8dp" />
+                <Button android:id="@+id/button4" style="@style/HomeMenuButton.Grey" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m4" android:layout_marginStart="8dp" />
             </LinearLayout>
             <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginBottom="14dp">
-                <Button android:id="@+id/button5" style="@style/HomeMenuButton" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m5" android:layout_marginEnd="8dp" />
-                <Button android:id="@+id/button6" style="@style/HomeMenuButton" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m6" android:layout_marginStart="8dp" />
+                <Button android:id="@+id/button5" style="@style/HomeMenuButton.Grey" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m5" android:layout_marginEnd="8dp" />
+                <Button android:id="@+id/button6" style="@style/HomeMenuButton.Grey" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m6" android:layout_marginStart="8dp" />
             </LinearLayout>
             <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginBottom="14dp">
-                <Button android:id="@+id/button16" style="@style/HomeMenuButton" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m7" android:layout_marginEnd="8dp" />
-                <Button android:id="@+id/button7" style="@style/HomeMenuButton" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m8" android:layout_marginStart="8dp" />
+                <Button android:id="@+id/button16" style="@style/HomeMenuButton.Grey" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m7" android:layout_marginEnd="8dp" />
+                <Button android:id="@+id/button7" style="@style/HomeMenuButton.Grey" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m8" android:layout_marginStart="8dp" />
             </LinearLayout>
             <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginBottom="14dp">
-                <Button android:id="@+id/button8" style="@style/HomeMenuButton" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m9" android:layout_marginEnd="8dp" />
-                <Button android:id="@+id/button9" style="@style/HomeMenuButton" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m10" android:layout_marginStart="8dp" />
+                <Button android:id="@+id/button8" style="@style/HomeMenuButton.Grey" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m9" android:layout_marginEnd="8dp" />
+                <Button android:id="@+id/button9" style="@style/HomeMenuButton.Grey" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m10" android:layout_marginStart="8dp" />
             </LinearLayout>
             <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginBottom="14dp">
-                <Button android:id="@+id/button10" style="@style/HomeMenuButton" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m11" android:layout_marginEnd="8dp" />
-                <Button android:id="@+id/button11" style="@style/HomeMenuButton" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m12" android:layout_marginStart="8dp" />
+                <Button android:id="@+id/button10" style="@style/HomeMenuButton.Grey" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m11" android:layout_marginEnd="8dp" />
+                <Button android:id="@+id/button11" style="@style/HomeMenuButton.Grey" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m12" android:layout_marginStart="8dp" />
             </LinearLayout>
             <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginBottom="14dp">
-                <Button android:id="@+id/button12" style="@style/HomeMenuButton" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m13" android:layout_marginEnd="8dp" />
-                <Button android:id="@+id/button13" style="@style/HomeMenuButton" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m14" android:layout_marginStart="8dp" />
+                <Button android:id="@+id/button12" style="@style/HomeMenuButton.Grey" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m13" android:layout_marginEnd="8dp" />
+                <Button android:id="@+id/button13" style="@style/HomeMenuButton.Grey" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m14" android:layout_marginStart="8dp" />
             </LinearLayout>
             <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginBottom="14dp">
-                <Button android:id="@+id/button14" style="@style/HomeMenuButton" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m15" android:layout_marginEnd="8dp" />
-                <Button android:id="@+id/button15" style="@style/HomeMenuButton" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m16" android:layout_marginStart="8dp" />
+                <Button android:id="@+id/button14" style="@style/HomeMenuButton.Grey" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m15" android:layout_marginEnd="8dp" />
+                <Button android:id="@+id/button15" style="@style/HomeMenuButton.Grey" android:layout_width="0dp" android:layout_weight="1" android:text="@string/m16" android:layout_marginStart="8dp" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
